--- a/src/Pages/Landing.css
+++ b/src/Pages/Landing.css
@@ -5,8 +5,69 @@
 }
 .landing__left {
     height: 100%;
+    width: 100%;
     display: flex;
 }
 .landing__left > img {
     height: 500px;
+    margin: auto;
+    margin-top: 50px;
 }
+.landing__right {
+    height: 100vh;
+    width: 85%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+.landing__rightOptions {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.landing__rightOptionsTop {
+    display: flex;
+    width: auto;
+    height: 250px;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+.landing__rightOptionsTop > h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 64px;
+    padding-top: 80px;
+}
+.landing__rightOptionsTop > h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 31px;
+}
+.landing__rightOptionsMiddle {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+}
+.landing__rightOptionsMiddle > hr {
+    margin-top: 10px;
+    
+}
+.landing__rightOptionsMiddle > button {
+    height: 40px;
+    display: flex;
+    margin-top: 10px;
+    align-items: center;
+    border: 1px solid lightgray;
+    background-color: white;
+    border-radius: 20px;
+    justify-content: center;
+}
+
+.avatar {
+    width: 25px !important; /* Adjust the width as needed */
+    height: 25px !important; /* Adjust the height as needed */
+    margin-right: 8px; /* Adjust the margin-right as needed */
+  }
