--- a/src/Pages/Landing.css
+++ b/src/Pages/Landing.css
@@ -1,5 +1,9 @@
 .landing {
     display: flex;
+    flex-direction: column;
+}
+.landing__top {
+    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -11,12 +15,13 @@
 .landing__left > img {
     height: 500px;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 80px;
 }
 .landing__right {
     height: 100vh;
     width: 85%;
     margin: auto;
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -28,34 +33,35 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 70px;
 }
 .landing__rightOptionsTop {
     display: flex;
     width: auto;
-    height: 250px;
     flex-direction: column;
     justify-content: space-between;
+
     
 }
 .landing__rightOptionsTop > h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 64px;
-    padding-top: 80px;
 }
 .landing__rightOptionsTop > h2 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 31px;
+    margin-top: 50px;
 }
 .landing__rightOptionsMiddle {
     display: flex;
     flex-direction: column;
-    width: 250px;
+    width: 300px;
+    margin-top: 20px;
 }
-.landing__rightOptionsMiddle > hr {
-    margin-top: 10px;
-    
+.landing__rightOptionsMiddle > .divider {
+    padding-top: 20px;
 }
-.landing__rightOptionsMiddle > button {
+ button {
     height: 40px;
     display: flex;
     margin-top: 10px;
@@ -64,10 +70,52 @@
     background-color: white;
     border-radius: 20px;
     justify-content: center;
+    font-size: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: pointer;
+}
+.landing__rightOptionsMiddle > .Google:hover {
+    background-color: whitesmoke;
+    border-color: #acdeff;
+}
+.landing__rightOptionsMiddle > .Apple {
+    font-weight: bold;
+}
+.landing__rightOptionsMiddle > .Create {
+    font-weight: bold;
+    background-color: #1C9BF0;
+    color:white;
+    border: none;
+}
+.landing__rightOptionsMiddle > p {
+    font-size: 12px;
+    margin-top: 10px;
+}
+a {
+    text-decoration: none;
+    color: #1C9BF0;
 }
 
 .avatar {
-    width: 25px !important; /* Adjust the width as needed */
-    height: 25px !important; /* Adjust the height as needed */
+    width: 20px !important; /* Adjust the width as needed */
+    height: 20px !important; /* Adjust the height as needed */
     margin-right: 8px; /* Adjust the margin-right as needed */
-  }
+}
+.landing__rightOptionsBottom {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    margin-top: 40px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 50px;
+}
+.landing__rightOptionsBottom > h3 {
+    font-size: 17px;
+}
+.landing__rightOptionsBottom > .Login {
+    color: #1C9BF0;
+    font-weight: bold;
+}
+.landing__bottom {
+    margin-top: 70px;
+}
