--- a/src/Pages/Landing.css
+++ b/src/Pages/Landing.css
@@ -90,6 +90,9 @@
 .landing__rightOptionsMiddle > p {
     font-size: 12px;
     margin-top: 10px;
+    overflow-wrap: break-word;
+    max-width: 300px;
+
 }
 a {
     text-decoration: none;
@@ -114,8 +117,9 @@ a {
 }
 .landing__rightOptionsBottom > .Login {
     color: #1C9BF0;
+    margin-top: 20px;
     font-weight: bold;
 }
 .landing__bottom {
-    margin-top: 70px;
+    margin-top: 100px;
 }
