--- a/src/Pages/Components/Footer.css
+++ b/src/Pages/Components/Footer.css
@@ -7,10 +7,15 @@
     justify-content: center;
     
 }
-p {
+.footer > p {
     margin: 15px;
     margin-top: 0px;
     white-space: nowrap;
     color: #536471;
     font-size: 14px;
+    cursor: pointer;
+}
+.footer > p:hover {
+    text-decoration: underline;
+
 }
